name:                psi-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CodiePP/psi-config
license:             GPL-3
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          codieplusplus at apax dot net
copyright:           2018 by Alexander Diemand
category:            system configuration and security
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evaluation
                     , Types 
                     , Expression
                     , CCommands
                     , Hash
                     , HostConfiguration
                     , CSupport
  ghc-options:         -O
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , base16-bytestring
                     , hex
                     , cryptohash-sha256
                     , unix
  default-language:    Haskell2010
  c-sources:           src/mapped.c
  extra-libraries:   

executable psi-config-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       Istdio
                     , Types 
                     , Hash
                     , HostConfiguration
                     , CSupport
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , base16-bytestring
                     , hex
                     , cryptohash-sha256
                     , unix
                     , psi-config
  default-language:    Haskell2010

test-suite psi-config-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       EvaluationSpec
                     , HashSpec
  build-depends:       base
                     , psi-config
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CodiePP/psi-config

